[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/Clickable.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="ClickableRoot" type="Node2D"]

[node name="ClickableArea" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="ClickableArea"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea"]
[connection signal="input_event" from="ClickableArea" to="ClickableArea" method="_on_ClickableArea_input_event"]
[connection signal="mouse_entered" from="ClickableArea" to="ClickableArea" method="_on_ClickableArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="ClickableArea" method="_on_ClickableArea_mouse_exited"]
